deploy: 312334fadeafdde4c6e13e4039747cc91d11fe5a

--- a/franske-courses/current/itc-2300/lab-asterisk-basic-swrconfigs.html
+++ b/franske-courses/current/itc-2300/lab-asterisk-basic-swrconfigs.html
@@ -242,15 +242,33 @@
 <h2 id="_notes"><a class="anchor" href="#_notes"></a>Notes</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Don&#8217;t forget to modify for the information specific to your Pod:
-* Change the hostname of both the Router and Switch to include your Pod ID
-* Change the IP Address on the Router Fa0/0 interface to the correct IP for your pod</p>
+<p>Don&#8217;t forget to modify for the information specific to your Pod:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Change the hostname of both the Router and Switch to include your Pod ID</p>
+</li>
+<li>
+<p>Change the IP Address on the Router Fa0/0 interface to the correct IP for your pod</p>
+</li>
+</ul>
 </div>
 <div class="paragraph">
-<p>You may want to make some additional changes for administration ease:
-* Set an enable secret
-* Setup a username and secret on both devices
-* Setup SSH on both devices</p>
+<p>You may want to make some additional changes for administration ease:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Set an enable secret</p>
+</li>
+<li>
+<p>Setup a username and secret on both devices</p>
+</li>
+<li>
+<p>Setup SSH on both devices</p>
+</li>
+</ul>
 </div>
 </div>
 </div>
@@ -442,7 +460,7 @@ dial-peer voice 3 pots
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-10-01 16:22:47 -0500<br>
+<p>Document Build Time: 2022-10-02 13:36:43 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
