--- a/franske-courses/current/itc-2300/lab-asterisk-sccpconf.html
+++ b/franske-courses/current/itc-2300/lab-asterisk-sccpconf.html
@@ -245,9 +245,17 @@
 <p>The following shows an example of the things you may need to change in your sccp.conf file.</p>
 </div>
 <div class="paragraph">
-<p>Don&#8217;t forget to modify for the information specific to your Pod:
-* Change the MAC addresses of the phones to match your phones
-* Change the descriptions, line names, caller ID names, etc.</p>
+<p>Don&#8217;t forget to modify for the information specific to your Pod:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Change the MAC addresses of the phones to match your phones</p>
+</li>
+<li>
+<p>Change the descriptions, line names, caller ID names, etc.</p>
+</li>
+</ul>
 </div>
 </div>
 </div>
@@ -354,7 +362,7 @@ vmnum = 2999</pre>
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-10-01 16:22:47 -0500<br>
+<p>Document Build Time: 2022-10-02 13:36:43 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
