--- a/franske-courses/current/itc-2300/lab-asterisk-xmldefault.html
+++ b/franske-courses/current/itc-2300/lab-asterisk-xmldefault.html
@@ -245,8 +245,14 @@
 <p>This file is requested by Cisco IP phones from the TFTP server which is set in option 150 of the DHCP settings. In our case we have setup option 150 to point to our Debian server which is also running a TFTP server. This file tells the phones what the IP address of our VoIP server is so they can connect to it. In our case that IP is the same as the TFTP server because Asterisk is running on the same server.</p>
 </div>
 <div class="paragraph">
-<p>Don&#8217;t forget to modify for the information specific to your Pod:
-* Change the IP Address in the processNodeName section to be the IP address of your Asterisk server</p>
+<p>Don&#8217;t forget to modify for the information specific to your Pod:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Change the IP Address in the processNodeName section to be the IP address of your Asterisk server</p>
+</li>
+</ul>
 </div>
 </div>
 </div>
@@ -273,7 +279,7 @@
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-10-01 16:22:47 -0500<br>
+<p>Document Build Time: 2022-10-02 13:36:43 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
