deploy: 23e7a1c305e37f2f6e5cb4a08d0bc8057f17c182

--- a/franske-courses/current/itc-2300/lab-asterisk-extensionsconf.html
+++ b/franske-courses/current/itc-2300/lab-asterisk-extensionsconf.html
@@ -417,11 +417,11 @@ exten =&gt; _51055529XX,1,Goto(internal_extensions,${EXTEN:6:4},1) ; Send outsid
 <h2 id="_reloading_after_configuration_changes"><a class="anchor" href="#_reloading_after_configuration_changes"></a>Reloading After Configuration Changes</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>If you make changes to the extensions.conf file and need to get Asterisk to re-load the dialplan you can run the <strong>dialplan reload</strong> command from the Asterisk CLI to re-read the file.</p>
+<p>If you make changes to the extensions.conf file and need to get Asterisk to re-load the dialplan you can run the <code><strong>dialplan reload</strong></code> command from the Asterisk CLI to re-read the file.</p>
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-10-02 13:36:43 -0500<br>
+<p>Document Build Time: 2022-10-02 13:43:30 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
